<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Race</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_time">00:00:00</string>
    <string name="game_over">Game Over</string>
    <string name="bravo">Bravo!</string>
    <string name="game_complete">You have successfully completed the game</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="view_scores">View Scores</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="no_scores">No Scores</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_name">Enter Name</string>

</resources>