<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textViewDiffLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty_level"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDiffLevel"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radioButtonHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/hard" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDiffLevel"
        android:layout_below="@+id/radioGroupDiff"
        android:layout_marginTop="20dp"
        android:text="@string/sound"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewSound"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonSoundOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/on" />

        <RadioButton
            android:id="@+id/radioButtonSoundOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/off" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupSound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:text="@string/save_changes"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>