<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGameOver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/try_again" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonTryAgain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/home" />

</RelativeLayout>