<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/game_complete"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGameOver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/home" />

</RelativeLayout>